[workspace]
members = ["contracts/*", "packages/*", "scripts"]
exclude = ["scripts"]
resolver = "1"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
kujira = "0.8"
kujira-rs-testing = "1.4"
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw-utils = "1.0"
cw2 = "1.1"
cosmwasm-schema = "1.2"
cw-multi-test = "0.18"
schemars = "0.8"
serde = "1.0"
cw20 = "1.0"
thiserror = "1"
serde_json = "1.0"
rewards-logic = { path = "packages/rewards-logic" }
rewards-interfaces = { path = "packages/rewards-interfaces" }