[workspace]
members = ["contracts/*", "packages/*"]
package.version = "1.1.0"
resolver = "1"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
kujira = { git = "https://github.com/Team-Kujira/kujira-rs" }
cosmwasm-std = { version = "2.0", default-features = false }
cosmwasm-storage = "2.0"
cw-storage-plus = "2.0"
cw-utils = "2.0"
cw2 = "2.0"
cw4 = "2.0"
cosmwasm-schema = "2.0"
cw-multi-test = { git = "https://github.com/cosmwasm/cw-multi-test", default-features = false }
schemars = "0.8"
serde = "1.0"
cw20 = "2.0"
thiserror = "1"
anyhow = "1.0"
cw4-stake = "2.0"
serde_json = "1.0"
rewards-logic = { path = "packages/rewards-logic" }
rewards-interfaces = { path = "packages/rewards-interfaces" }
