[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aquarium = { git = "https://github.com/AmitPr/aquarium", branch = "main" }
kujira = { workspace = true }
cosmwasm-std = { workspace = true }
cw-utils = { workspace = true }
serde_json = "1.0.94"
