[package]
name = "rewards-contract"
version.workspace = true
authors = ["Amit Prasad <amit@entropiclabs.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

library = []


[dependencies]
kujira = { workspace = true }
cosmwasm-std = { workspace = true, default-features = false }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw4 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
rewards-logic.workspace = true
rewards-interfaces.workspace = true
thiserror.workspace = true

[dev-dependencies]
cw-multi-test = { workspace = true, default-features = false }
rewards-tests.workspace = true
